<resources>
    <string name="app_name">AlquilerVehiculosMobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_principal">Menu principal</string>
    <string name="administrar_vehiculos">Administrar Vehiculos</string>
    <string name="administrar_usuarios">Administrar Usuarios</string>
    <string name="administrar_alquileres">Administrar Alquileres</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Administrar Vehiculos -->
    <string name="fragment_administrar_vehiculo_placa">Placa</string>
    <string name="fragment_administrar_vehiculo_modelo">Modelo</string>
    <string name="fragment_administrar_vehiculo_marca">Marca</string>
    <string name="fragment_administrar_vehiculo_color">Color</string>
    <string name="fragment_administrar_vehiculo_precio">Precio</string>
    <string name="fragment_administrar_vehiculo_guardar">Guardar</string>
    <string name="fragment_administrar_vehiculo_buscar">Buscar</string>
    <string name="fragment_administrar_vehiculo_registrado">El vehiculo ha sido registrado</string>
    <string name="fragment_administrar_vehiculo_no_encontrado">No se encuentra informacion del vehiculo</string>

    <!-- Administrar Usuarios -->
    <string name="fragment_administrar_usuario_cedula">Cedula</string>
    <string name="fragment_administrar_usuario_nombres">Nombres</string>
    <string name="fragment_administrar_usuario_apellidos">Apellidos</string>
    <string name="fragment_administrar_usuario_fecha_nacimiento">Fecha Nacimiento</string>
    <string name="fragment_administrar_usuario_guardar">Guardar</string>
    <string name="fragment_administrar_usuario_buscar">Buscar</string>
    <string name="fragment_administrar_usuario_registrado">El usuario ha sido registrado</string>
    <string name="fragment_administrar_usuario_no_encontrado">No se encuentra informacion del usuario</string>

    <!-- Administrar Alquileres -->
    <string name="fragment_administrar_alquiler_cedula">Cedula</string>
    <string name="fragment_administrar_alquiler_buscar_usuario">Buscar usuario</string>
    <string name="fragment_administrar_alquiler_placa">Placa</string>
    <string name="fragment_administrar_alquiler_buscar_vehiculo">Buscar vehiculo</string>
    <string name="fragment_administrar_alquiler_fecha_inicio">Fecha Inicio</string>
    <string name="fragment_administrar_alquiler_fecha_fin">Fecha Fin</string>
    <string name="fragment_administrar_alquiler_valor">Valor</string>
    <string name="fragment_administrar_alquiler_alquilar">Alquilar</string>
    <string name="fragment_administrar_alquiler_devolver">Devolver</string>
    <string name="fragment_administrar_alquiler_alquilando">Alquilando</string>
    <string name="fragment_administrar_alquiler_devolviendo">Devolviendo</string>
    <string name="fragment_administrar_alquiler_alquilado">El vehiculo ha sido alquilado</string>
    <string name="fragment_administrar_alquiler_devuelto">El vehiculo ha sido devuelto</string>
    <string name="fragment_administrar_alquiler_error_alquilando">Error alquilando el vehiculo</string>
    <string name="fragment_administrar_alquiler_error_devolviendo">Error devolviendo el vehiculo</string>
    <string name="fragment_administrar_alquiler_seleccione_fecha_inicio">Seleccione una fecha de inicio</string>

    <!-- General -->
    <string name="mensajes_generales_registrando">Registrando</string>
    <string name="mensajes_generales_buscando">Buscando</string>
</resources>
