<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vistas.AdministrarVehiculoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <EditText
            android:id="@+id/placa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_administrar_vehiculo_placa"
            android:inputType="textCapCharacters" />

        <EditText
            android:id="@+id/modelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_administrar_vehiculo_modelo"
            android:inputType="text" />

        <EditText
            android:id="@+id/marca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_administrar_vehiculo_marca"
            android:inputType="text" />

        <EditText
            android:id="@+id/color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_administrar_vehiculo_color"
            android:inputType="text" />

        <EditText
            android:id="@+id/precio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_administrar_vehiculo_precio"
            android:inputType="number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/guardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fragment_administrar_vehiculo_guardar" />

            <Button
                android:id="@+id/buscar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fragment_administrar_vehiculo_buscar" />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>