<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vistas.AdministrarUsuarioFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <EditText
            android:id="@+id/cedula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_administrar_usuario_cedula"
            android:inputType="number" />

        <EditText
            android:id="@+id/nombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_administrar_usuario_nombres"
            android:inputType="text" />

        <EditText
            android:id="@+id/apellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_administrar_usuario_apellidos"
            android:inputType="text" />

        <EditText
            android:id="@+id/fechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_administrar_usuario_fecha_nacimiento"
            android:inputType="date" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/guardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fragment_administrar_usuario_guardar" />

            <Button
                android:id="@+id/buscar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fragment_administrar_usuario_buscar" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>