<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vistas.AdministrarAlquilerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <EditText
            android:id="@+id/cedula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_administrar_alquiler_cedula"
            android:inputType="text" />

        <EditText
            android:id="@+id/placa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_administrar_alquiler_placa"
            android:inputType="text" />

        <EditText
            android:id="@+id/fechaInicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_administrar_alquiler_fecha_inicio"
            android:inputType="text" />

        <EditText
            android:id="@+id/fechaFin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_administrar_alquiler_fecha_fin"
            android:inputType="text" />

        <EditText
            android:id="@+id/valor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_administrar_alquiler_valor"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/guardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fragment_administrar_usuario_alquilar" />

            <Button
                android:id="@+id/buscar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fragment_administrar_usuario_devolver" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>